substituí a palavra pelo por 'por na linha 40

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <a href="https://www.linkedin.com/in/fl%C3%A1vio-henrique-gomes-da-silva-534716244/"target="_blank"> 🎟️Linkedin</a>
         </li>
       </ul>
-      <footer>Feito com 💜 pela <a href="https://rocketseat.com.br" target="_blank">Rocketseat</a> </footer>
+      <footer>Feito com 💜 por <a href="https://rocketseat.com.br" target="_blank">Rocketseat</a> </footer>
   </div>
   </body>
 </html>
